@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-12T16:29:42Z",
+  "timestamp" : "2022-05-13T01:48:34Z",
   "count_outdated" : 1826,
   "uniques_outdated" : 364,
-  "count" : 2103,
+  "count" : 2104,
   "uniques" : 399,
   "clones" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-05-12T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 0, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
