@@ -1,5 +1,5 @@
 {
-  "count": 277,
+  "count": 278,
   "uniques": 20,
   "clones": [
     {
@@ -59,7 +59,7 @@
     },
     {
       "timestamp": "2022-05-12T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 1
     }
   ]
