@@ -1,3 +1,9 @@
+2022-05-13T01:48:34Z:
+* notice: last 14d: all unq: 278 20
+* notice: prev accum: outdated-all outdated-unq / all unq: 1826 364 / 2103 399
+* notice: next accum: outdated-all outdated-unq / all unq: 1826 364 / 2104 399
+* notice: prev json diff / prev day diff: unq all: +0 +1 -0 -0 / +0 +1 -0 -0
+
 2022-05-12T16:29:42Z:
 * notice: last 14d: all unq: 277 20
 * notice: prev accum: outdated-all outdated-unq / all unq: 1826 364 / 2102 399
